--- a/docs/getting_started.ipynb
+++ b/docs/getting_started.ipynb
@@ -11,14 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/HD/python_envs/hf/lib/python3.11/site-packages/deepeval/__init__.py:52: UserWarning: You are using deepeval version 2.3.1, however version 2.3.2 is available. You should consider upgrading via the \"pip install --upgrade deepeval\" command.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import litellm\n",
     "import pandas as pd\n",
     "\n",
-    "from asyncio import Semaphore\n",
     "from datasets import load_dataset\n",
     "from deepeval import evaluate\n",
     "from deepeval.metrics import SummarizationMetric\n",
@@ -217,15 +225,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Explore the summarization metric"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,22 +251,197 @@
     "        max_tokens=200,\n",
     "    )\n",
     "    response = llm_response[\"choices\"][0][\"message\"][\"content\"]\n",
-    "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return response\n",
+    "\n",
+    "\n",
     "def summarize_samples(sample_df, summarization_model):\n",
     "    return [\n",
     "        run_summarization(summarization_model, r[\"document\"])\n",
     "        for _, r in sample_df.iterrows()\n",
-    "    ]\n",
-    "\n",
-    "\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt_4o_mini_summaries = summarize_samples(sample_df, \"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Ground Truth:** Canada has launched a mission to map the Arctic seabed to support its bid to extend its territory up to the North Pole."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Generated Summary:** Canada is conducting a six-week mission with two icebreakers to collect data from an undersea ridge near the North Pole, amid competing claims from Russia and Denmark for territorial rights over potentially resource-rich Arctic seabed."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Ground Truth:** NHS Highland has forecast a potential £15.6m overspend based on the first three months of the financial year, but said it expects to break even."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Generated Summary:** Raigmore Hospital in Inverness is projected to have a potential £15.6 million overspend by the end of the financial year, prompting the finance director to express concern while stating that breakeven is still achievable with significant effort."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Ground Truth:** Drivers have been warned to take care as smoke from a 2,000-tonne rubbish fire near Llandow in the Vale of Glamorgan is being blown over roads."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Generated Summary:** A fire at Llandow Industrial Estate is causing local road disruptions and health warnings due to smoke, prompting Public Health Wales to advise residents to stay indoors and avoid exposure."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Ground Truth:** A public consultation into plans for a third offshore wind farm off the East Yorkshire coast has started."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Generated Summary:** Dong Energy plans to develop Hornsea Three, potentially the world's largest offshore wind farm, as part of its commitment to the UK offshore wind industry, while addressing concerns over seabird collision risks."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for ground_truth_summary, generated_summary in zip(\n",
+    "    sample_df.summary, gpt_4o_mini_summaries\n",
+    "):\n",
+    "    display(Markdown(f\"**Ground Truth:** {ground_truth_summary}\"))\n",
+    "    display(Markdown(f\"**Generated Summary:** {generated_summary}\"))\n",
+    "    display(Markdown(\"---\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore the summarization metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def evaluate_samples(sample_df, summaries, evaluation_model):\n",
     "    eval_scores = []\n",
     "    for t, generated_summary in zip(sample_df.iterrows(), summaries):\n",
@@ -298,16 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpt_4o_mini_summaries = summarize_samples(sample_df, \"gpt-4o-mini\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +505,7 @@
      "data": {
       "text/markdown": [
        "#### Summary\n",
-       "Canada is conducting a six-week mission with two icebreakers to gather data in a contested Arctic region while competing with Russia and Denmark for claims to potential oil and gas reserves beneath the seabed."
+       "Canada is conducting a six-week mission with two icebreakers to collect data from an undersea ridge near the North Pole, amid competing claims from Russia and Denmark for territorial rights over potentially resource-rich Arctic seabed."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -362,7 +529,7 @@
     {
      "data": {
       "text/markdown": [
-       "The score is 0.20 because the summary includes contradictory details about the nature of the territorial claims in the Arctic, focusing incorrectly on oil and gas reserves instead of the Arctic seabed around Lomonosov Ridge. Additionally, the summary omits critical information about Canada's action in filing a UN application, the specifics of the icebreakers, and the mission's data collection focus, which were present in the original text."
+       "The score is 0.20 because the summary fails to capture crucial elements of the original text, as evidenced by the questions that the original text can answer but the summary cannot. This indicates that significant information was omitted, affecting the comprehensiveness and accuracy of the summary."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -374,7 +541,7 @@
     {
      "data": {
       "text/markdown": [
-       "- alignment score: 0.80\n",
+       "- alignment score: 1.00\n",
        "- coverage score: 0.20"
       ],
       "text/plain": [
@@ -420,7 +587,7 @@
      "data": {
       "text/markdown": [
        "#### Summary\n",
-       "Raigmore Hospital is facing a potential £15.6 million overspend, which finance director Nick Kenton believes presents significant concern, but there is confidence that financial breakeven can still be achieved by the end of the financial year."
+       "Raigmore Hospital in Inverness is projected to have a potential £15.6 million overspend by the end of the financial year, prompting the finance director to express concern while stating that breakeven is still achievable with significant effort."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -432,7 +599,7 @@
     {
      "data": {
       "text/markdown": [
-       "#### Score: **0.5**"
+       "#### Score: **0.0**"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -444,7 +611,7 @@
     {
      "data": {
       "text/markdown": [
-       "The score is 0.50 because the summary contains factual inaccuracies, such as misstating the overspend amount at Raigmore Hospital and incorrectly identifying Nick Kenton's position. It also fails to address certain queries that the original text answers, indicating crucial content omissions."
+       "The score is 0.00 because the summary contains significant contradictions that misrepresent critical financial details concerning Raigmore Hospital, leading to high potential for misunderstanding. Additionally, there are omissions of key questions the original text could address, which further diminishes its informative value."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -456,8 +623,8 @@
     {
      "data": {
       "text/markdown": [
-       "- alignment score: 0.50\n",
-       "- coverage score: 0.60"
+       "- alignment score: 0.00\n",
+       "- coverage score: 0.20"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -504,7 +671,7 @@
      "data": {
       "text/markdown": [
        "#### Summary\n",
-       "A fire at the Llandow Industrial Estate is ongoing, affecting local roads and prompting health advisories for residents to keep windows closed due to potentially harmful smoke, while emergency services monitor the situation."
+       "A fire at Llandow Industrial Estate is causing local road disruptions and health warnings due to smoke, prompting Public Health Wales to advise residents to stay indoors and avoid exposure."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -528,7 +695,7 @@
     {
      "data": {
       "text/markdown": [
-       "The score is 0.20 because the summary omits critical questions that the original text addresses, indicating a significant lack of coverage and completeness."
+       "The score is 0.20 because the summary contains a major contradiction by modifying the recommendation given by Andrew Kibble regarding staying indoors, and it fails to answer multiple specific questions that the original text could address."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -540,7 +707,7 @@
     {
      "data": {
       "text/markdown": [
-       "- alignment score: 1.00\n",
+       "- alignment score: 0.75\n",
        "- coverage score: 0.20"
       ],
       "text/plain": [
@@ -585,7 +752,7 @@
      "data": {
       "text/markdown": [
        "#### Summary\n",
-       "Dong Energy is proposing Hornsea Three, which aims to become the world's largest offshore wind farm, following the ongoing developments of Hornsea Project One and Two amid environmental concerns regarding seabird collisions."
+       "Dong Energy plans to develop Hornsea Three, potentially the world's largest offshore wind farm, as part of its commitment to the UK offshore wind industry, while addressing concerns over seabird collision risks."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -597,7 +764,7 @@
     {
      "data": {
       "text/markdown": [
-       "#### Score: **0.2**"
+       "#### Score: **0.4**"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -609,7 +776,7 @@
     {
      "data": {
       "text/markdown": [
-       "The score is 0.20 because the summary includes extra information not supported by the original text, such as the relationship of Hornsea Three to other projects, and fails to answer several key questions addressed in the original text. These shortcomings significantly reduced the summarization score."
+       "The score is 0.40 because the summary fails to effectively represent the original text. The additional information creates confusion by including RSPB concerns unrelated to Hornsea Three, potentially misleading the reader. Furthermore, the summary does not address specific questions that the original text can answer, reducing its overall informativeness and accuracy."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -622,7 +789,7 @@
      "data": {
       "text/markdown": [
        "- alignment score: 0.75\n",
-       "- coverage score: 0.20"
+       "- coverage score: 0.40"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
